fixed phone position on mobile

--- a/src/styles/BTCWallet.less
+++ b/src/styles/BTCWallet.less
@@ -21,6 +21,12 @@
   justify-content: flex-end;
 }
 
+.test{
+  display: flex;
+  flex-direction: row;
+  
+}
+
 @media(max-width: 850px){
 
   .wallet-info{
