--- a/src/styles/Phone.less
+++ b/src/styles/Phone.less
@@ -26,40 +26,7 @@
 
 
 
- @media only screen and (max-width: 420px) {
-      
-    .box-phone{
-      margin: 0;
-    }
-    .box-phone img {
-        margin:auto;
-
-    }
-    .second-fullpage.show {
-    	top: 75% !important;
-    	transform: scale(0.7);
-        -webkit-transform: scale(0.7);
-    }
-    .second-fullpage {
-        text-align: center;
-        margin: auto;
-        width: 100%;
-        transform: scale(0.7);
-    }
-    .second-fullpage.inscren {
-    	height: 415px;
-    }
-    .wrapper-scren {
-      margin-left: 3px;
-    }
-    h2 {
-          font-size: 20px;
-        }
-        .section .inner p {
-          font-size: 16px;
-        }
-    }
-
+ 
 
     @media only screen and (max-width : 895px) {
 
@@ -119,12 +86,16 @@
 
 @media only screen and (max-width: 420px) {
       
-     
+
+    .content-title {
+        font-size: 7vw;
+    }
     .box-phone{
     	margin: 0;
     }
     .box-phone img {
         margin:auto;
+        margin-top: 30px;
 
     }
     .second-fullpage.show {
@@ -220,6 +191,10 @@
     }
     .container-centered, #section0 .container-centered {
       top: 40%;
+    }
+    .button-container{
+      flex-direction: column;
+      
     }
   }
 
